(Maybe) fix ikaros font problem on mobile devices. Add footer

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,8 +1,9 @@
 @font-face {
-    font-family: 'Ikaros';
-    src: url('css/Ikaros.otf'),
-    font-weight: normal;
-    font-style: normal;
+	font-family: 'Conv_Ikaros';
+	src: url('fonts/Ikaros.eot');
+	src: local('☺'), url('fonts/Ikaros.woff') format('woff'), url('fonts/Ikaros.ttf') format('truetype'), url('fonts/Ikaros.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
 }
 
 
@@ -78,4 +79,12 @@ i{
 
 .location{
   margin-top: -20px;
+}
+
+.footer{
+  margin-top: 80px;
+}
+
+.small-p{
+  font-size: .9em
 }
